# MeshManipulator

./: .gitignore  CMakeLists.txt  OpenglProject.kdev4  README.md  shell.nix  tmp.txt  toggletasks.json
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/BezierSurface/: CMakeLists.txt  MyViewer.cpp  MyViewer.hpp  main.cpp
examples/FPSRotation/: CMakeLists.txt  MyViewer.cpp  main.cpp
examples/TestDependencies/: CMakeLists.txt  main.cpp
examples/TpIGAI2/: CMakeLists.txt  MyApplication.cpp  MyApplication.hpp  MyViewer.cpp  MyViewer.hpp  README.md  RingManager.cpp  RingManager.hpp  main.cpp
examples/TpIGAI2/obj_files/: untitled.mtl
examples/TpIGAI3/: CMakeLists.txt  MyViewer.cpp  MyViewer.hpp  README.md  main.cpp
examples/TpIGAI3/obj_files/garuda-and-vishnu-obj/: Garuda_and_Vishnu.mtl
nix-libs/: Glfw.nix  OpenMeshV2.nix
nix-libs/OpenMesh/: default.nix
src/: main.cpp
src/Geometry/Curve/: BernsteinPolynom.cpp  BernsteinPolynom.hpp  BezierCurve.hpp
src/Geometry/Surface/: BezierSurface.cpp  BezierSurface.hpp
src/Mesh/: CurveMesh.cpp  CurveMesh.hpp  Mesh.cpp  Mesh.hpp  Mesh2.cpp  Mesh2.hpp  SurfaceMesh.cpp  SurfaceMesh.hpp  SurfaceMesh2.cpp  SurfaceMesh2.hpp
src/MeshManipulator/Geometry/Curve/: BernsteinPolynom.hpp  BezierCurve.cpp  BezierCurve.hpp
src/MeshManipulator/Geometry/Surface/: BezierSurface.hpp
src/MeshManipulator/Mesh/: CurveMesh.cpp  CurveMesh.hpp  Mesh.cpp  Mesh.hpp  ObjectMesh.cpp  ObjectMesh.hpp  OpenGLObject.cpp  OpenGLObject.hpp
src/MeshManipulator/Utils/: Camera.cpp  Camera.hpp  Drawable.cpp  Drawable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  VertexArrayBuffer.hpp  Viewer.cpp  Viewer.hpp
src/MeshManipulator/Utils/Lights/: DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  SpotLight.cpp  SpotLight.hpp
src/MeshManipulator/Window/: Application.cpp  Application.hpp  CallbackFunctions.cpp  CallbackFunctions.hpp  Viewer.hpp
src/Utils/: Drawable.cpp  Scene.cpp  Scene.hpp  Shader.hpp  Vertex.h
src/Window/: Application.cpp
tests/: CMakeLists.txt
tests/BezierSurface/: CMakeLists.txt  main.cpp
tests/HelloWorld1/: CMakeLists.txt  main.cpp
tests/HelloWorld2/: CMakeLists.txt  main.cpp
